tests/fails/f9.t
require("fail")

terra foo() : 3 
end
foo()
